fix docs width on mobile

--- a/css/docs.css
+++ b/css/docs.css
@@ -7,19 +7,14 @@
 @viewport {
   width: device-width
 }
-body {
-  width: 100%;
-  height: 100%;
+#docs {
   position: relative;
 }
 .navbar {
   margin-bottom: 0;
 }
-#content:focus {
-  outline: 0
-}
 .bs-docs-sidebar.affix {
-  position: static
+  position: static;
 }
 @media (min-width:768px) {
   .bs-docs-sidebar {
